[package]
name = "pw"
version = "1.10.0"
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.98"

config = { version = "0.15.11", features = ["yaml"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

chrono = "0.4.41"

redis = { version = "0.31.0", features = ["tokio-comp", "json"] }

tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", features = ["json", "http1", "tokio"] }
rust-embed = "8.7.2"
mime_guess = "2.0.5"

walkdir = "2.5.0"

log = "0.4.27"
log4rs = "1.3.0"

[dev-dependencies]
env_logger = "0.11.8"
fake = "4.3.0"
