[package]
name = "pw"
version = "1.10.2"
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.16"

config = { version = "0.15.15", features = ["yaml"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

chrono = "0.4.41"

redis = { version = "0.32.5", features = ["tokio-comp", "json"] }

tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["json", "http1", "tokio"] }
rust-embed = "8.7.2"
mime_guess = "2.0.5"

walkdir = "2.5.0"

ipnet = "2.11.0"
tower = "0.5.2"
uuid = { version = "1.18.1", features = ["v4"] }

log = "0.4.27"
log4rs = "1.3.0"

[dev-dependencies]
env_logger = "0.11.8"
fake = "4.4.0"
serial_test = "3.2.0"
