[package]
name = "pw"
version = "1.11.1"
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"

config = { version = "0.15.19", features = ["yaml"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

chrono = "0.4.42"

redis = { version = "1.0.2", features = ["tokio-comp", "json"] }

tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["json", "http1", "tokio"] }
rust-embed = "8.9.0"
mime_guess = "2.0.5"

walkdir = "2.5.0"

ipnet = "2.11.0"
tower = "0.5.2"
uuid = { version = "1.19.0", features = ["v4"] }

log = "0.4.29"
log4rs = "1.4.0"

[dev-dependencies]
env_logger = "0.11.8"
fake = "4.4.0"
serial_test = "3.3.1"
