[package]
name = "backend"
version = "1.2.1"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
common = { path = "../common", features = ["crypto"] }

anyhow = "1.0.72"

config = { version = "0.13.3", features = ["yaml"] }

serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"

tokio = { version = "1.28.2", features = ["full"] }

chrono = "0.4.28"

redis = { version = "0.23.3", features = ["tokio-comp", "serde_json"] }

actix-web = { version = "4.3.1", features = ["rustls"]}
actix-cors = "0.6.4"
actix-plus-static-files = { git = "https://github.com/lebe-dev/actix-plus.git" }
actix-files = "0.6.2"

walkdir = "2.4.0"

log = "0.4.19"
log4rs = "1.2.0"

[dev-dependencies]
common = { path = "../common", features = ["crypto", "test-utils"] }
env_logger = "0.9.3"
fake = "2.6.1"
