[package]
name = "backend"
version = "1.4.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
anyhow = "1.0.89"

config = { version = "0.14.0", features = ["yaml"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

tokio = { version = "1.40.0", features = ["full"] }

chrono = "0.4.38"

redis = { version = "0.27.2", features = ["tokio-comp", "serde_json"] }

actix-web = { version = "4.3.1", features = ["rustls"]}
actix-cors = "0.6.4"
actix-plus-static-files = { git = "https://github.com/lebe-dev/actix-plus.git" }
actix-files = "0.6.2"

walkdir = "2.5.0"

log = "0.4.22"
log4rs = "1.3.0"

[dev-dependencies]
env_logger = "0.9.3"
fake = "2.9.2"
