[package]
name = "backend"
version = "1.4.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
anyhow = "1.0.89"

config = { version = "0.14.0", features = ["yaml"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

chrono = "0.4.38"

redis = { version = "0.27.2", features = ["tokio-comp", "serde_json"] }

tokio = { version = "1.40.0", features = ["full"] }
axum = {  version = "0.7.5", features = ["json","http1","tokio"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"

walkdir = "2.5.0"

log = "0.4.22"
log4rs = "1.3.0"

[dev-dependencies]
env_logger = "0.9.3"
fake = "2.9.2"
