[package]
name = "webui"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
anyhow = "1.0.72"

dioxus = "0.4.0"
dioxus-web = "0.4.0"
dioxus-router = { version = "0.4.1", features = ["web"] }

common = { path = "../common" }

serde_json = "1.0.104"

web-sys = { version = "0.3.64" }

aes-wasm = "0.1.6"
hex = "0.4.3"

reqwest = { version = "0.11.18", features = ["json"] }

getrandom = { version = "0.2.10", features = ["js"] }

fake = "2.6.1"

log = "0.4.19"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
